--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 	      <artifactId>junit-jupiter-params</artifactId>
 	      <scope>test</scope>
 	    </dependency>
+	    <dependency>
+	        <groupId>unknown.binary</groupId>
+	        <artifactId>AbsoluteLayout</artifactId>
+	        <version>SNAPSHOT</version>
+	    </dependency>
 	</dependencies>
 
   <build>
@@ -99,4 +104,11 @@
       </plugins>
     </pluginManagement>
   </build>
+    <repositories>
+        <repository>
+            <id>unknown-jars-temp-repo</id>
+            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+            <url>file:${project.basedir}/lib</url>
+        </repository>
+    </repositories>
 </project>
