--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,16 @@
                 <artifactId>jakarta.mail</artifactId>
                 <version>2.0.1</version>
             </dependency>
+            <dependency>
+                <groupId>com.github.librepdf</groupId>
+                <artifactId>openpdf</artifactId>
+                <version>1.3.30</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.librepdf</groupId>
+                <artifactId>openpdf</artifactId>
+                <version>1.3.30</version>
+            </dependency>
             </dependencies>
            
 
