--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,12 @@
                 <artifactId>openpdf</artifactId>
                 <version>1.3.30</version>
             </dependency>
-            </dependencies>
+	 <dependency>
+	  <groupId>org.netbeans.external</groupId>
+	  <artifactId>AbsoluteLayout</artifactId>
+	  <version>RELEASE250</version>
+	 </dependency>
+	</dependencies>
            
 
   <build>
